User login and signup page fixes