@@ -1,85 +1,103 @@
 package cloudflight.integra.backend.service;
 
-import cloudflight.integra.backend.exception.UserNotFoundException;
+import cloudflight.integra.backend.model.User;
 import cloudflight.integra.backend.model.dtos.UserDto;
-import cloudflight.integra.backend.repository.initial.IUserRepository;
+import cloudflight.integra.backend.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 public class UserDtoServiceTests {
 
-    private IUserRepository userRepository;
+    private UserRepository userRepository;
     private UserService userService;
 
     @BeforeEach
     void setup() {
-        userRepository = Mockito.mock(IUserRepository.class);
+        userRepository = mock(UserRepository.class);
         userService = new UserService(userRepository);
     }
 
     @Test
     void testFindAll() {
-        List<UserDto> userDtos = Arrays.asList(
-                                               new UserDto(UUID.randomUUID(), "Ana", "ana@email.com"),
-                                               new UserDto(UUID.randomUUID(), "Ion", "ion@email.com")
-        );
-
-        when(userRepository.getAll()).thenReturn(userDtos);
+        List<User> entities = List.of(
+                                      new User(UUID.randomUUID(), "Ana", "ana@email.com"),
+                                      new User(UUID.randomUUID(), "Ion", "ion@email.com"));
+        when(userRepository.findAll()).thenReturn(entities);
 
         List<UserDto> result = userService.findAll();
-        assertEquals(userDtos, result);
 
-        verify(userRepository, times(1)).getAll();
+        assertEquals(2, result.size());
+        assertEquals(entities.get(0)
+                .getId(),
+                     result.get(0)
+                             .getId());
+        assertEquals(entities.get(0)
+                .getUsername(),
+                     result.get(0)
+                             .getUsername());
+        assertEquals(entities.get(0)
+                .getEmail(),
+                     result.get(0)
+                             .getEmail());
+        verify(userRepository, times(1)).findAll();
     }
 
     @Test
     void testFindUser() {
         UUID id = UUID.randomUUID();
-        UserDto userDto = new UserDto(id, "Ana", "ana@email.com");
-
-        when(userRepository.getUser(id)).thenReturn(userDto);
+        User entity = new User(id, "Ana", "ana@email.com");
+        when(userRepository.findById(id)).thenReturn(Optional.of(entity));
 
         UserDto result = userService.findUser(id);
-        assertEquals(userDto, result);
 
-        verify(userRepository, times(1)).getUser(id);
+        assertEquals(id, result.getId());
+        assertEquals("Ana", result.getUsername());
+        assertEquals("ana@email.com", result.getEmail());
+        verify(userRepository, times(1)).findById(id);
     }
 
     @Test
     void testFindUserNotFound() {
         UUID id = UUID.randomUUID();
+        when(userRepository.findById(id)).thenReturn(Optional.empty());
 
-        when(userRepository.getUser(id)).thenThrow(new UserNotFoundException("User with id " + id + " not found"));
-
-        assertThrows(UserNotFoundException.class, () -> userService.findUser(id));
-        verify(userRepository, times(1)).getUser(id);
+        assertThrows(RuntimeException.class, () -> userService.findUser(id));
+        verify(userRepository, times(1)).findById(id);
     }
 
     @Test
     void testCreateUser() {
-        UserDto userDto = new UserDto(UUID.randomUUID(), "Ana", "ana@email.com");
+        UUID id = UUID.randomUUID();
+        UserDto dto = new UserDto(id, "Ana", "ana@email.com");
+        User saved = new User(id, "Ana", "ana@email.com");
+        when(userRepository.save(any(User.class))).thenReturn(saved);
 
-        userService.createUser(userDto);
+        UserDto result = userService.createUser(dto);
 
-        verify(userRepository, times(1)).create(userDto);
+        assertEquals(id, result.getId());
+        assertEquals("Ana", result.getUsername());
+        assertEquals("ana@email.com", result.getEmail());
+        verify(userRepository, times(1)).save(any(User.class));
     }
 
     @Test
-    void testCreateUserIDNull() {
-        UserDto userDto = new UserDto(null, "Ana", "ana@email.com");
+    void testCreateUserIdNull() {
+        UserDto dto = new UserDto(null, "Ana", "ana@email.com");
+        when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        userService.createUser(userDto);
+        UserDto result = userService.createUser(dto);
 
-        verify(userRepository, times(1)).create(userDto);
+        assertNotNull(result.getId());
+        assertEquals("Ana", result.getUsername());
+        assertEquals("ana@email.com", result.getEmail());
+        verify(userRepository, times(1)).save(any(User.class));
     }
 
     @Test
@@ -88,39 +106,33 @@ public class UserDtoServiceTests {
 
         userService.deleteUser(id);
 
-        verify(userRepository, times(1)).delete(id);
-    }
-
-    @Test
-    void testDeleteUserNotFound() {
-        UUID id = UUID.randomUUID();
-        doThrow(new UserNotFoundException("User with id " + id + " not found"))
-                .when(userRepository)
-                .delete(id);
-
-        assertThrows(UserNotFoundException.class, () -> userService.deleteUser(id));
-        verify(userRepository, times(1)).delete(id);
+        verify(userRepository, times(1)).deleteById(id);
     }
 
     @Test
     void testUpdateUser() {
         UUID id = UUID.randomUUID();
-        UserDto userDto = new UserDto(id, "AnaUpdated", "anaupdated@email.com");
+        User existing = new User(id, "Ana", "ana@email.com");
+        when(userRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(userRepository.save(any(User.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        userService.updateUser(id, userDto);
+        UserDto dto = new UserDto(id, "AnaUpdated", "anaupdated@email.com");
 
-        verify(userRepository, times(1)).update(userDto);
+        userService.updateUser(id, dto);
+
+        verify(userRepository, times(1)).findById(id);
+        verify(userRepository, times(1)).save(any(User.class));
+        assertEquals("AnaUpdated", existing.getUsername());
+        assertEquals("anaupdated@email.com", existing.getEmail());
     }
 
     @Test
     void testUpdateUserNotFound() {
         UUID id = UUID.randomUUID();
-        UserDto userDto = new UserDto(id, "AnaUpdated", "anaupdated@email.com");
-        doThrow(new UserNotFoundException("User with id " + userDto.getId() + " not found"))
-                .when(userRepository)
-                .update(userDto);
+        when(userRepository.findById(id)).thenReturn(Optional.empty());
 
-        assertThrows(UserNotFoundException.class, () -> userService.updateUser(id, userDto));
-        verify(userRepository, times(1)).update(userDto);
+        assertThrows(RuntimeException.class, () -> userService.updateUser(id, new UserDto(id, "X", "x@x.com")));
+        verify(userRepository, times(1)).findById(id);
+        verify(userRepository, never()).save(any(User.class));
     }
 }
